Fixed Horizontal Scroll Bug
Also fixed GDG logo overlap with sidebar issue

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,6 @@ body {
 section {
   border-bottom: 1px solid white;
   min-height: 100vh;
-  max-width: 100vw;
   overflow: hidden;
   text-align: center;
 }
@@ -187,9 +186,6 @@ section {
       font-weight: 600;
     }
     #gdg_logo {
-      position: absolute;
-      top: 15svh;
-      right: 40px;
       height: 50px;
     }
     @media (min-width: 676px) {
@@ -208,9 +204,8 @@ section {
     top: 0;
     left: 0;
     z-index: -1;
-    width: 100vw;
+    width: 100%;
     height: 100svh;
-    aspect-ratio: inherit;
     overflow: hidden;
     object-fit: fill;
   }
